applications/microservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - microservice.ycsuisse.click
    secretName: microservice-tls
  rules:
  - host: microservice.ycsuisse.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microservice-service
            port:
              number: 80
